# Vanishing-point-and-transmission-line-detect-in-UAV-inspection

include/: LSDVP.h  MSAC.h  errorNIETO.h  k-means.h  lm.h  selfdef.h
src/: CMakeLists.txt  LSDVP.cpp  MSAC.cpp  errorNIETO.cpp  k-means.cpp  lm.cpp  main  main.cpp  selfdef.cpp
src/.kdev4/: src.kdev4
